# CURSWORK

./: CMakeLists.txt  Dockerfile  build_docker.sh  docker-start.sh  run.sh
src/: cookbookdatabase.cpp  cookbookdatabase.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recipe.cpp  recipe.h  recipedialog.cpp  recipedialog.h  recipedialog.ui
